# OASIS-marcwang

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  Dockerfile  LICENSE  README.md  dependencies.yml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
OasisLib/include/: GeoGramVoronoi.h  GeogramBase.h  GeogramCaster.h  GeogramVoronoi.h  MeshGraph.h
OasisLib/src/: GeoGramVoronoi.cpp  GeogramVoronoi.cpp  MeshGraph.cpp  wrap_geogram.cpp
oasis/: clipper_offsetting.py  hatching.py  oasis_io.py  oasis_setting.py  skeleton.py  slicing.py  util.py
src/: CMakeLists.txt  vtkVoxelizer.cpp  vtkVoxelizer.h
test/: CMakeLists.txt  hello_world.cpp  test_generate_vor.py  test_hatching.py  test_io.py  test_offset.py  test_skeleton.py  test_slice_object.py  test_voronoi.cpp  test_voxel_slicing.cpp
test/test_artifact/: OASIS_Input_Config_Build_Plate_University_of_Waterloo.xls  Parameter_quality_nut_1.stl  Spiral_lattice_cone_1.stl
